ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to a contact&apos;s assistant</description>
    <label>Contact&apos;s Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>