ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__Alias_Contact_Data__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Alias_Contact_Data__c</fullName>
    <label>C&amp;P Alias Contact Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>