ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__CnP_Connect_Alias_Index__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Connect_Alias_Index__c</fullName>
    <externalId>true</externalId>
    <label>C&amp;P Connect Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>