ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__CnP_Global_Rank__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Global_Rank__c</fullName>
    <label>C&amp;P Patron Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>