ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__CnP_Lift_Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Expiration_date__c</fullName>
    <label>C&amp;P Lift Expiration date</label>
    <type>Date</type>
</CustomField>