ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__CnP_Payment_Maximum__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Payment_Maximum__c</fullName>
    <label>C&amp;P Maximum Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>