ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/CnP_PaaS__Connect_Link__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Connect_Link__c</fullName>
    <formula>IF(CnP_PaaS__CnP_Connect_Alias_Index__c != null, HYPERLINK(&apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;https://Connect.ClickandPledge.com/Fundraiser/&apos;+CnP_PaaS__CnP_Connect_Alias_Index__c, &apos;_blank&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C&amp;P Connect Global Profile</label>
    <type>Text</type>
</CustomField>