ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Contact_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id 18</label>
    <type>Text</type>
</CustomField>