ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>today</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>