ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <description>Member/Representatives District</description>
    <inlineHelpText>District Represents.</inlineHelpText>
    <label>District</label>
    <length>5</length>
    <type>Text</type>
</CustomField>