ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Elected_Official__c.field-meta.xml
<CustomField>
    <fullName>Elected_Official__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elected Official?</label>
    <type>Checkbox</type>
</CustomField>