ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Gala_2018_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Gala_2018_Import_Id__c</fullName>
    <label>Gala 2018 Import Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>