ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Generate_Tax_Letters__c.field-meta.xml
<CustomField>
    <fullName>Generate_Tax_Letters__c</fullName>
    <formula>&quot;&amp;id=&quot;+ Id +
&quot;&amp;templateid=a1a1Y00000YsNZzQAN&quot;+
&quot;&amp;ofn=&quot;+ FirstName +
&quot;&amp;defaultPDF=1&quot;+
&quot;&amp;QMode=1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Tax Letters</label>
    <type>Text</type>
</CustomField>