ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/ggiv__GGOId__c.field-meta.xml
<CustomField>
    <fullName>ggiv__GGOId__c</fullName>
    <description>External identifier in Greater Giving Online</description>
    <label>GGOId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>