ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Highest_level_of_education__c.field-meta.xml
<CustomField>
    <fullName>Highest_level_of_education__c</fullName>
    <label>Highest level of education?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No High School Diploma</fullName>
            </value>
            <value>
                <fullName>High School Diploma or Equivalent</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
            <value>
                <fullName>Master’s Degree</fullName>
            </value>
            <value>
                <fullName>Doctorate Degree</fullName>
            </value>
            <value>
                <fullName>JD/MD</fullName>
            </value>
            <value>
                <fullName>Prefer not to answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>