ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/How_did_you_hear_about_the_LGCN__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_the_LGCN__c</fullName>
    <label>How did you hear about the LGCN?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I attended an LCF event</fullName>
            </value>
            <value>
                <fullName>Through a personal connection</fullName>
            </value>
            <value>
                <fullName>Through the media (social or news)</fullName>
            </value>
            <value>
                <fullName>Other [write-in]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>