ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <description>Account ID from before NPSP Upgrade</description>
    <label>Legacy Account ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>