ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/LGC_Anniversary__c.field-meta.xml
<CustomField>
    <fullName>LGC_Anniversary__c</fullName>
    <description>Date member joined Giving Circle</description>
    <inlineHelpText>Date member joined Giving Circle</inlineHelpText>
    <label>LGC Anniversary</label>
    <type>Date</type>
</CustomField>