ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Membership_Amount_For_The_Year__c.field-meta.xml
<CustomField>
    <fullName>Membership_Amount_For_The_Year__c</fullName>
    <description>Membership Amount For Current Membership Year</description>
    <inlineHelpText>Membership Amount For Current Membership Year</inlineHelpText>
    <label>Membership Amount For The Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>