ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Merge_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Merge_Mailing_Address__c</fullName>
    <formula>IF( MailingStreet &lt;&gt; &quot;&quot;, MailingStreet &amp; BR() &amp; MailingCity &amp; &quot;, &quot;&amp; MailingState &amp;&quot; &quot;&amp; MailingPostalCode  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Mailing Address</label>
    <type>Text</type>
</CustomField>