ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Name_Alias1__c.field-meta.xml
<CustomField>
    <fullName>Name_Alias1__c</fullName>
    <description>Alias 1</description>
    <inlineHelpText>Alternative name for contact</inlineHelpText>
    <label>AKA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>