ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Name_Alias2__c.field-meta.xml
<CustomField>
    <fullName>Name_Alias2__c</fullName>
    <description>Another name.</description>
    <inlineHelpText>Alternate name</inlineHelpText>
    <label>Name Alias2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>