ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/npe01__PreferredPhone__c.field-meta.xml
<CustomField>
    <fullName>npe01__PreferredPhone__c</fullName>
    <description>Which phone number should be used for most communications involving this Contact?</description>
    <label>Preferred Phone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>