ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/npe01__Secondary_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>npe01__Secondary_Address_Type__c</fullName>
    <description>What type of address is the other address?</description>
    <label>Secondary Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>