ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/npo02__Languages__c.field-meta.xml
<CustomField>
    <fullName>npo02__Languages__c</fullName>
    <description>Deprecated field.  Do not use.</description>
    <label>Languages - DEPRECATED</label>
    <length>100</length>
    <type>Text</type>
</CustomField>