ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Other_LGCN_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>Other_LGCN_Hear_About_Us__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>