ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Other_Organization_Donations__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization_Donations__c</fullName>
    <description>Do you donate regularly to other organizations or institutions? If yes, which ones?</description>
    <inlineHelpText>Do you donate regularly to other organizations or institutions? If yes, which ones?</inlineHelpText>
    <label>Other Organization Donations</label>
    <type>TextArea</type>
</CustomField>