ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Other_Sector__c.field-meta.xml
<CustomField>
    <fullName>Other_Sector__c</fullName>
    <label>Other (Sector)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>