ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Democrat</fullName>
            </value>
            <value>
                <fullName>Republican</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>