ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Preferred_Pronouns__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Pronouns__c</fullName>
    <label>Preferred Pronouns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Her/She/Hers</fullName>
            </value>
            <value>
                <fullName>Him/He/His</fullName>
            </value>
            <value>
                <fullName>They/Them/Theirs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>