ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Primary_Affiliation_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Affiliation_Id__c</fullName>
    <formula>casesafeid( npsp__Primary_Affiliation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Affiliation Id</label>
    <type>Text</type>
</CustomField>