ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Relationship_to_LCF__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_LCF__c</fullName>
    <description>Describes relationship to LCF.</description>
    <label>Relationship to LCF</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affinity Group Donor</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>ERG Lead</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Fiscal Sponsee Donor</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>Grantee</fullName>
            </value>
            <value>
                <fullName>Latino Legacy Circle member</fullName>
            </value>
            <value>
                <fullName>LCF Giving Circle</fullName>
                <label>LCF Giving Circle Member</label>
            </value>
            <value>
                <fullName>LCF Intern/Fellow</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>NextGen LGCN member</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Past Funder</fullName>
            </value>
            <value>
                <fullName>Past Grantee</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Top Funders</fullName>
            </value>
            <value>
                <fullName>Trend Setter</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>