ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Relationship_with_Primary_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Primary_Affiliation__c</fullName>
    <label>Relationship with Primary Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Elected Official</fullName>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>