ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Send_2019_Tax_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_2019_Tax_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>***Do Not Touch Send 2019 Tax Letter</label>
    <type>Checkbox</type>
</CustomField>