ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Send_Tax_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_Tax_Letter__c</fullName>
    <description>##Conga created button:00b1Y000001a95S</description>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;emailfromid=0051Y000009PPm7QAG&quot; + 
&quot;&amp;cetid=a1R1Y000006UJBNUA4&quot; + 
&quot;&amp;templateid=a1a1Y00000YsNZzQAN&quot; + 
&quot;&amp;ofn=&quot; + FirstName +&quot; &quot; + LastName+&quot; &quot; + &quot;{Template.Label}&quot; +
&quot;&amp;fp0=1&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;_sc1=Attachments&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
    <label>Send Tax Letter</label>
    <type>Text</type>
</CustomField>