ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Source_of_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Contact_Info__c</fullName>
    <description>The source of info for creating this CONTACT.</description>
    <inlineHelpText>Source NFG? Greater Giving? LGC application? Event? ConstantContact?</inlineHelpText>
    <label>Source of Contact Info</label>
    <length>200</length>
    <type>Text</type>
</CustomField>