ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Total_Donations_Last_Year__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations_Last_Year__c</fullName>
    <label>Total Donations Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>