ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/What_sector_do_you_work_in__c.field-meta.xml
<CustomField>
    <fullName>What_sector_do_you_work_in__c</fullName>
    <label>What sector do you work in?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business / Finance</fullName>
            </value>
            <value>
                <fullName>Government/Politics</fullName>
            </value>
            <value>
                <fullName>Health / Education</fullName>
            </value>
            <value>
                <fullName>Nonprofit/Philanthropy</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Other [Write-In]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>