ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Why_are_you_joining_the_LGCN__c.field-meta.xml
<CustomField>
    <fullName>Why_are_you_joining_the_LGCN__c</fullName>
    <label>Why are you joining the LGCN?</label>
    <type>TextArea</type>
</CustomField>