ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/X2019_Donor__c.field-meta.xml
<CustomField>
    <fullName>X2019_Donor__c</fullName>
    <label>2019 Donor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>