ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/X2019_Gala__c.field-meta.xml
<CustomField>
    <fullName>X2019_Gala__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2019 Gala</label>
    <type>Checkbox</type>
</CustomField>