ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/fields/Year_Assumed_Office__c.field-meta.xml
<CustomField>
    <fullName>Year_Assumed_Office__c</fullName>
    <label>Year Assumed Office</label>
    <length>4</length>
    <type>Text</type>
</CustomField>