ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/listViews/ALL_contacts.listView-meta.xml
<ListView>
    <fullName>ALL_contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>npsp__Primary_Affiliation__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>household</value>
    </filters>
    <label>ALL contacts</label>
</ListView>