ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Contact/listViews/Contacts_without_Households.listView-meta.xml
<ListView>
    <fullName>Contacts_without_Households</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notContain</operation>
        <value>Household</value>
    </filters>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.CnP_PaaS__C_P_Online</value>
    </filters>
    <label>Contacts without Households</label>
</ListView>